--- a/home.css
+++ b/home.css
@@ -34,7 +34,7 @@ main {
 
 .home-first {
     display: grid;
-    grid-template-rows: 2.5fr 0.75fr 0.1fr;
+    grid-template-rows: 2.5fr;
     row-gap: 1rem;
     margin-left: 10%;
     padding: 24px 36px; /* Fixed padding values */
@@ -158,7 +158,7 @@ main {
     }
 
     .home-second img {
-        max-height: 13rem;
+        max-height: 11rem;
         object-fit: contain;
         
     }
@@ -184,7 +184,45 @@ main {
     .home-first {
         margin-left: 10%;
         margin-right: 10%;
-        grid-template-rows: 1fr 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .home-first div {
+        font-size: 6rem;
+        padding: 0.5rem;
+    }
+
+    .typing-text p {
+        font-size: 4.5rem;
+    }
+
+    .home-second img {
+        width: 100%;
+        height: auto;
+        object-fit: contain;
+        
+    }
+}
+
+@media (max-width: 742px) {
+    nav {
+        right: 1rem;
+    }
+    
+    nav h2 {
+        margin: 0.5rem 1rem;
+    }
+
+    main {
+        padding-top: 3rem;
+        grid-template-columns: 1fr; /* Single column layout */
+        column-gap: 2rem;
+    }
+
+    .home-first {
+        margin-left: 1%;
+        margin-right: 1%;
+        grid-template-rows: 1fr;
     }
 
     .home-first div {
