--- a/home.css
+++ b/home.css
@@ -22,9 +22,8 @@ main {
     padding-top: 7rem;
     background-color: #FFECD1;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10rem;
+    flex-direction: column;
+    gap: 4rem;
     justify-content: center;
 }
 
@@ -89,6 +88,43 @@ main {
     object-fit: cover;
 }
 
+.home-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 9rem;
+}
+
+.home-bottom {
+    display: flex;
+    flex-direction: column;
+    background-color: #141414;
+    font-size: 2rem;
+    text-align: center;
+    color: #FFECD1;
+    align-items: center;
+    padding: 6rem 12rem;
+}
+
+.chivo {
+    font-family: "Chivo", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 570;
+    font-style: normal;
+}
+
+.dots {
+    font-size: 6rem;
+}
+
+.yellow {
+    color: #FFBD59;
+}
+
+.orange {
+    color: #EE7B30;
+}
+
 /* Media Queries */
 /* Responsive font sizing */
 
@@ -111,10 +147,6 @@ main {
 
     .typing-text p {
         font-size: 4rem;
-    }
-
-    .home-first {
-        margin-left: 3rem;
     }
 
     .home-second img {
@@ -154,38 +186,6 @@ main {
     }
 }
 
-@media (max-width: 1200px) {
-    
-    nav h2 {
-        margin: 1rem 2rem;
-    }
-
-    main {
-        padding-top: 5rem;
-        column-gap: 5rem;
-        gap: 3rem;
-    }
-
-    .home-first div {
-        font-size: 5rem;
-        padding: 1rem;
-    }
-
-    .home-first {
-        margin-left: 1rem;
-        margin-right: 1rem;
-    }
-
-    .typing-text p {
-        font-size: 3rem;
-    }
-
-    .home-second img {
-        max-height: 11rem;
-        object-fit: contain;
-        
-    }
-}
 
 @media (max-width: 925px) {
     
@@ -202,11 +202,6 @@ main {
     .home-first div {
         font-size: 4rem;
         padding: 1rem;
-    }
-
-    .home-first {
-        margin-left: 1rem;
-        margin-right: 1rem;
     }
 
     .typing-text p {
