--- a/home.css
+++ b/home.css
@@ -3,10 +3,15 @@
     margin: 0;
 }
 
-.nav-bar {
-    width: 100%;
-    background-color: antiquewhite;
-    position: fixed;
+/* Hide scrollbar */
+body {
+    overflow: -moz-scrollbars-none;
+    -ms-overflow-style: none;
+    scrollbar-width: none;  /* Firefox */
+}
+  
+::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
 }
 
 .nav-items {
@@ -14,10 +19,10 @@
     flex-direction: row;
     justify-content: flex-end;
     position: fixed;
-    right: 1rem;
-    background-color: blue;
+    background-color: #FFECD1;
     font-family: sans-serif;
     color: #C43204;
+    width: 100%;
 }
 
 nav h2 {
@@ -164,9 +169,6 @@ main {
 }
 
 @media (max-width: 1200px) {
-    .nav-items {
-        right: 2rem;
-    }
     
     .nav-items h2 {
         margin: 1rem 2rem;
@@ -211,7 +213,7 @@ main {
     }
 
     .nav-items {
-        right: 0;
+        justify-content: center;
     }
     
     .home-top {
@@ -249,6 +251,10 @@ main {
 
 @media (max-width: 575px) {
 
+    nav {
+        font-size: 1rem;
+    }
+
     .home-first div {
         font-size: 4rem;
     }
@@ -262,7 +268,7 @@ main {
     }
 
     .home-second img {
-        max-height: 10rem;
+        max-height: 8rem;
     }
 
     .home-bottom {
@@ -271,10 +277,10 @@ main {
 }
 
 
-@media (max-width: 575px) {
-
-    .home-second img {
-        max-height: 8rem;
+@media (max-width: 430px) {
+    nav h2 {
+        margin: 2rem 3rem;
+        font-size: 0.9rem;
     }
 }
 
