--- a/home.css
+++ b/home.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 
@@ -300,10 +301,12 @@ main {
 }
 
 
-@media (max-width: 430px) {
+@media (max-width: 400px) {
+    .home-first div {
+        font-size: 3.6rem;
+    }
     nav li {
-        margin: 2rem 3rem;
-        font-size: 0.9rem;
+        font-size: 1.2rem;
     }
 }
 
