Migrate top half of home page to React

--- a/personal-website/src/components/NameAndTypingBox.css
+++ b/personal-website/src/components/NameAndTypingBox.css
@@ -3,3 +3,13 @@
     grid-template-rows: 2.5fr;
     row-gap: 1rem;
 }
+
+
+@media (max-width: 843px) {
+
+    .home-first {
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+}
+
