--- a/personal-website/src/components/Navbar.css
+++ b/personal-website/src/components/Navbar.css
@@ -33,3 +33,35 @@ nav li:hover {
     -ms-transition: background-color 250ms linear;
     transition: background-color 250ms linear;
 }
+
+
+@media (max-width: 1600px) {
+
+    .nav-items li {
+        margin: 1rem 2rem;
+    }
+}
+
+
+@media (max-width: 843px) {
+
+    .nav-items {
+        justify-content: center;
+    }
+}
+
+@media (max-width: 575px) {
+
+    nav {
+        font-size: 1rem;
+    }
+}
+
+
+@media (max-width: 400px) {
+
+    nav li {
+        font-size: 1.2rem;
+    }
+}
+
