Center name text in box for vertical page layout

--- a/personal-website/src/components/NameBox.css
+++ b/personal-website/src/components/NameBox.css
@@ -41,6 +41,12 @@
     .name-text {
         font-size: 6rem;
     }
+
+    .name-text {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 @media (max-width: 575px) {
