--- a/personal-website/src/components/AboutMe.css
+++ b/personal-website/src/components/AboutMe.css
@@ -41,6 +41,48 @@
     color: #EE7B30;
 }
 
+
+@property --angle {
+    syntax: '<angle>';
+    initial-value: 90deg;
+    inherits: true;
+  }
+  
+  @property --gradX {
+    syntax: '<percentage>';
+    initial-value: 50%;
+    inherits: true;
+  }
+  
+  @property --gradY {
+    syntax: '<percentage>';
+    initial-value: 0%;
+    inherits: true;
+  }
+  
+  
+  :root {
+      --d: 2500ms;
+      --angle: 90deg;
+      --gradX: 100%;
+      --gradY: 50%;
+      --c1: #FFECD1;
+      --c2: rgba(168, 239, 255, 0.1);
+  }
+  
+  .box {
+      border-image: conic-gradient(from var(--angle), var(--c2), var(--c1) 0.1turn, var(--c1) 0.15turn, var(--c2) 0.25turn) 30;
+      animation: borderRotate var(--d) linear infinite forwards;
+      background-color: black;
+  }
+  
+  @keyframes borderRotate {
+      100% {
+          --angle: 420deg;
+      }
+  }  
+
+
 @media (max-width: 1300px) {
     .home-bottom {
         padding-right: 4rem;
