--- a/personal-website/src/pages/Projects.css
+++ b/personal-website/src/pages/Projects.css
@@ -14,6 +14,11 @@
     display: inline-block;
 }
 
+.cards-container {
+    margin-left: 5rem;
+    margin-top: 4rem;
+}
+
 @media (max-width: 1270px) {
     .main-projects .header {
         font-size: 3.5rem;
@@ -28,5 +33,9 @@
     .main-projects .header {
         margin-left: 1rem;
         margin-right: 1rem;
+    }
+
+    .cards-container {
+        margin-left: 0;
     }
 }
