--- a/personal-website/src/components/ProjectCard.css
+++ b/personal-website/src/components/ProjectCard.css
@@ -1,3 +1,11 @@
+.container {
+    transition: transform 0.3s ease-in-out;
+}
+
+.container:hover {
+    transform: scale(1.1);
+}
+
 .container .card{
     background-color: rgba(240, 248, 255, 0.767);
     width: 25rem;
